✨ Feat: 편집모드 ui 구현, 모임 기록 패키지 이동
Related to: #323

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -96,7 +96,7 @@
             android:exported="false"
             android:theme="@style/SlideAnimation" />
         <activity
-            android:name=".presentation.ui.group.diary.MoimDiaryDetailActivity"
+            android:name=".presentation.ui.community.diary.MoimDiaryDetailActivity"
             android:exported="false"
             android:windowSoftInputMode="adjustPan" />
         <activity
